push some function

--- a/views/trangchu.ejs
+++ b/views/trangchu.ejs
@@ -10,12 +10,19 @@
     <script>
 
         let socket = io("http://localhost:3000"); // ket noi vao server
-    $(document).ready(function () {
 
+        socket.on("Server-send-data",function(data){
+            $("#noidung").append(data)
+        })
+    $(document).ready(function () {
+        $("#mrA").click(function(){
+            socket.emit("Client-send-data","Hello");
+        })
     })
     </script>
 </head>
 <body>
-    <h1>Hello world!!</h1>
+    <div id="mrA">Client Send data</div>
+    <h2 id="noidung"></h2>
 </body>
 </html>
