--- a/views/trangchu.ejs
+++ b/views/trangchu.ejs
@@ -5,24 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trangchu</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+
     <script src="jquery.js"></script>
     <script src="socket.io/socket.io.js"></script>
-    <script>
-
-        let socket = io("http://localhost:3000"); // ket noi vao server
-
-        socket.on("Server-send-data",function(data){
-            $("#noidung").append(data)
-        })
-    $(document).ready(function () {
-        $("#mrA").click(function(){
-            socket.emit("Client-send-data","Hello");
-        })
-    })
-    </script>
+    <script src="main.js"></script>
 </head>
 <body>
-    <div id="mrA">Client Send data</div>
-    <h2 id="noidung"></h2>
+    <div class="col-md-12 form-group">
+        <div class="name-join form-group col-md-3">
+            <div class="col-md-12 form-group">
+                <input class="form-control" type="text" id="name" placeholder="Input your name or nick name">
+            </div>
+            <div class="col-md-2 form-group">
+                <input type="submit" class="btn btn-primary" id="join" value="Join">
+            </div>
+            <div id="status-name" class="col-md-12 form-group">
+            </div>
+        </div>
+        <h1>Testttttttttt</h1>
+        <div class="chat-box col-md-4">
+                <textarea class="form-control" name="chat-box" id="chat-box" cols="60" rows="30"></textarea>
+                <div class="send-message input-group">
+                    <input type="text" class="form-control" placeholder="Type a message..." aria-label="Type a message...">
+                    <span class="input-group-btn">
+                        <button id="send" class="btn btn-secondary" type"button">Send</button>
+                    </span>
+                </div>
+        </div>
+
+    </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </body>
 </html>
