--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,6 @@
+body {
+    background-color:#f5f4f4;
+}
 .name-join{
     margin-top: 20px;
 }
@@ -6,4 +9,13 @@ textarea#chat-box {
 }
 .send-message{
     margin-top: 10px;
-}   
+}
+.btn-logout {
+    margin-top: 20px;
+}
+div#new-room {
+    margin-left: 9px;
+}
+textarea#chat-box {
+    background-color: #fbfbfb;
+}
