--- a/views/trangchu.ejs
+++ b/views/trangchu.ejs
@@ -26,22 +26,13 @@
                     </div>
                 </div>
                 <ul id="status-name" class="form-group col-md-12"></ul>
-                <table class="table col-md-12" >
-                    <thead>
-                        <tr>
-                            <th>ROOMS</td>
-                        </tr>
-                    </th>
-                    <tbody id="list-room">
-                    </tbody>
-                </table>
             </div>
             <div class="chat-box col-md-4">
-                    <textarea id="chat-box" class="form-control" name="chat-box"  cols="60" rows="25"></textarea>
+                    <textarea id="chat-box" class="form-control" disabled name="chat-box"  cols="60" rows="25"></textarea>
                     <div class="send-message input-group">
                         <input id="message"type="text" class="form-control" placeholder="Type a message..." aria-label="Type a message...">
                         <span class="input-group-btn">
-                            <button id="send" class="btn btn-secondary" type"button">Send</button>
+                            <button id="send" class="btn btn-primary" type"submit">Send</button>
                         </span>
                     </div>
             </div>
@@ -50,15 +41,6 @@
                 </div>
                 <div class="form-group col-md-2">
                     <button id="logout" class="btn btn-legendary">logout</button>
-                </div>
-                <div id="new-room" class="form-group col-md-12">
-                    <button id="tao-nhom" class="btn btn-primary">new room</button>
-                    <div id="input-room" class="input-group">
-                        <input id="room"type="text" class="form-control" placeholder="Input name or Join Room" aria-label="Input name or join room">
-                        <span class="input-group-btn">
-                            <button id="create" class="btn btn-secondary" type"button">create</button>
-                        </span>
-                    </div>
                 </div>
             </div>
 
