--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,23 @@ div#new-room {
 textarea#chat-box {
     background-color: #fbfbfb;
 }
+.list-group-item
+{
+    border-radius: 0 !important;
+}
+p{
+            margin: 0;
+            padding: 8px 0;
+            font-size: 15px;
+            text-align: center;
+            background-color: #367ab7;
+            color: #fff;
+         }
+p.online {
+    width: 248px;
+}
+li.active{
+            background-color: #aaa !important;
+            border: 1px solid #bbb !important;
+            color: #fff !important;
+         }
