--- a/views/trangchu.ejs
+++ b/views/trangchu.ejs
@@ -11,7 +11,7 @@
 
     <script src="jquery.js"></script>
     <script src="socket.io/socket.io.js"></script>
-    <script src="main.js"></script>
+
 </head>
 <body>
     <div class="container">
@@ -22,31 +22,39 @@
                         <input class="form-control" type="text" id="name" placeholder="Input your name or nick name">
                     </div>
                     <div class="col-md-2 form-group">
-                        <input type="submit" class="btn btn-primary" id="join" value="Join">
+                        <input type="submit" class="btn btn-primary" id="register" onclick="register()" value="Join">
                     </div>
                 </div>
-                <ul id="status-name" class="form-group col-md-12"></ul>
+                <p class="col-md-12 online">Rooms</p>
+                <ul class="list-group col-md-12">
+                    <li class="list-group-item" id="android" onclick="changeRoom(this)">android</li>
+                    <li class="list-group-item" id="ios" onclick="changeRoom(this)">ios</li>
+                    <li class="list-group-item" id="webdev" onclick="changeRoom(this)">web-dev</li>
+                </ul>
+                <p class="col-md-12 online">Online</p>
+                <ul id="list-friends" class="form-group col-md-12 list-group"></ul>
             </div>
-            <div class="chat-box col-md-4">
-                    <textarea id="chat-box" class="form-control" disabled name="chat-box"  cols="60" rows="25"></textarea>
+            <div class="chat-box col-md-4" id="chat-content">
+                    <textarea id="chatbox" class="form-control" name="chat-box"  cols="60" rows="25"></textarea>
                     <div class="send-message input-group">
-                        <input id="message"type="text" class="form-control" placeholder="Type a message..." aria-label="Type a message...">
+                        <input id="chat"type="text" class="form-control" placeholder="Type a message..." aria-label="Type a message...">
                         <span class="input-group-btn">
-                            <button id="send" class="btn btn-primary" type"submit">Send</button>
+                            <button id="btn" class="btn btn-warning" type"button" onclick="sendChat()">Send</button>
                         </span>
                     </div>
             </div>
-            <div class="btn-logout col-md-3">
+            <!-- <div class="btn-logout col-md-3">
                 <div id="title" class="form-group col-md-8">
                 </div>
                 <div class="form-group col-md-2">
-                    <button id="logout" class="btn btn-legendary">logout</button>
+                    <button id="logout" class="btn btn-warning">logout</button>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
+    <script src="test.js"></script>
 </body>
 </html>
