--- a/views/trangchu.ejs
+++ b/views/trangchu.ejs
@@ -22,7 +22,7 @@
                         <input class="form-control" type="text" id="name" placeholder="Input your name or nick name">
                     </div>
                     <div class="col-md-2 form-group">
-                        <input type="submit" class="btn btn-primary" id="register" onclick="register()" value="Join">
+                        <button class="btn btn-primary" id="register" onclick="register()" >Join now</button>
                     </div>
                 </div>
                 <p class="col-md-12 online">Rooms</p>
@@ -42,6 +42,8 @@
                             <button id="btn" class="btn btn-warning" type"button" onclick="sendChat()">Send</button>
                         </span>
                     </div>
+            </div>
+            <div class="welcome col-md-3" id="wellcome">
             </div>
             <!-- <div class="btn-logout col-md-3">
                 <div id="title" class="form-group col-md-8">
